<resources>
    <string name="app_name">RecyclerViewSubmission</string>
    <string name="placeholder_item_name">Server</string>
    <string name="placeholder_item_description">Alat Penyimpanan</string>
    <string name="list">List View</string>
    <string name="cardview">Card View</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="item_image">Item Image</string>
    <string name="price">Price</string>
    <string name="item_detail_name">Item Detail Name</string>
    <string name="item_detail_price">Item Detail Price</string>
    <string name="item_detail_description">Item Detail Description</string>
    <string name="hardware_type">Hardware Type</string>
    <string name="item_detail_type">Item Detail Type</string>
    <string name="insert_new_hardware">Insert New Hardware</string>
    <string name="hardware_name">Hardware Name</string>
    <string name="hardware_description">Hardware Description</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="_203">203</string>
    <string name="_23_3_2019">23-3-2019</string>
    <string name="expire_date">Expire Date</string>
    <string name="hardware_expire_date">Hardware Expire Date</string>
    <string name="item_detail_expire">Item Detail Expire</string>
</resources>
