<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_add_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/insert_new_hardware"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_item_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="23dp"
        android:text="@string/hardware_name"
        app:layout_constraintEnd_toStartOf="@+id/spinner_item_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinner_item_name" />

    <Spinner
        android:id="@+id/spinner_item_name"
        android:layout_width="0dp"
        android:layout_height="23dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="77dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_item_description_label"
        app:layout_constraintEnd_toStartOf="@+id/iv_item_image"
        app:layout_constraintStart_toEndOf="@+id/tv_item_name_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_item_description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/description"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_item_description"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_text_item_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="165dp"

        android:layout_marginEnd="42dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/iv_item_image"
        app:layout_constraintStart_toEndOf="@+id/tv_item_price_label"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_item_image"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="67dp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_item_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinner_item_name"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tv_item_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/price"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_item_price"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_text_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/_203"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/edit_text_item_description"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_item_description" />

    <TextView
        android:id="@+id/tv_item_expire_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/expire_date"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_item_expire_date"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_text_item_expire_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/_23_3_2019"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/edit_text_item_price"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_item_price" />

</android.support.constraint.ConstraintLayout>